--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.6.1",
     "@ionic/angular": "^4.1.0",
+    "cordova-android": "6.3.0",
+    "cordova-android-support-gradle-release": "^3.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "ionic4-rating": "^1.0.9",
     "rxjs": "~6.5.1",
@@ -57,5 +65,18 @@
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
